# wayland-example

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  design-plan.md
cmake/: Doxygen.cmake  FindWaylandClient.cmake  FindWaylandCursor.cmake  FindWaylandProtocols.cmake  FindXKBCommon.cmake
example/: CMakeLists.txt  main.cpp
include/: window.hpp  window_manager.hpp  window_registry.hpp
src/: CMakeLists.txt  shared_memory.cpp  shared_memory.hpp  wayland_client.cpp  wayland_client.hpp  wayland_context.cpp  wayland_context.hpp  wayland_cursor.cpp  wayland_cursor.hpp  wayland_deleters.cpp  wayland_deleters.hpp  wayland_display.cpp  wayland_display.hpp  wayland_input.hpp  wayland_input_manager.cpp  wayland_input_manager.hpp  wayland_registry.cpp  wayland_registry.hpp  wayland_surface.cpp  wayland_surface.hpp  wayland_surface_buffer.cpp  wayland_surface_buffer.hpp  wayland_types.cpp  wayland_types.hpp  wayland_util.hpp  wayland_window.cpp  wayland_window.hpp  window.cpp  window_manager.cpp  window_registry.cpp  window_registry.hpp
src/events/: CMakeLists.txt  event_registry.cpp  pointer_event.cpp
src/events/include/: event.hpp  event_registry.hpp  pointer_event.hpp
src/utils/: logger.cpp  logger.hpp  utils.cpp  utils.hpp
src/wayland_client/: wayland_display.cpp
tests/: CMakeLists.txt  test_main.cpp  wayland_types_test.cpp
